--- a/style.css
+++ b/style.css
@@ -571,4 +571,10 @@ button:disabled {
   .transcript-box {
     margin-right: 0;
   }
+  .required {
+   color: #d32f2f; /* red */
+   margin-left: 4px;
+   font-weight: 700;
+  }
+ 
 }
